--- a/QtWidgetsApplication1/qt_4dof.ui
+++ b/QtWidgetsApplication1/qt_4dof.ui
@@ -148,6 +148,9 @@
               <property name="maximum">
                <number>100</number>
               </property>
+              <property name="singleStep">
+               <number>1</number>
+              </property>
               <property name="value">
                <number>50</number>
               </property>
@@ -250,13 +253,13 @@
             <item>
              <widget class="QSlider" name="zSlider">
               <property name="minimum">
-               <number>-35</number>
+               <number>0</number>
               </property>
               <property name="maximum">
-               <number>-20</number>
+               <number>100</number>
               </property>
               <property name="value">
-               <number>-20</number>
+               <number>0</number>
               </property>
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
