--- a/QtWidgetsApplication1/qt_4dof.ui
+++ b/QtWidgetsApplication1/qt_4dof.ui
@@ -136,6 +136,16 @@
         </spacer>
        </item>
        <item>
+        <widget class="QCheckBox" name="shearSwitch">
+         <property name="text">
+          <string>Shear Switch</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QCheckBox" name="torsionSwitch">
          <property name="enabled">
           <bool>true</bool>
